--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -529,4 +529,8 @@
     <string name="local_time_format">MMM dd, yyyy</string>
     <string name="promotion_format">%1$s จาก <b>%2$s</b> ระดับ (%3$s)</string>
 
+    <string-array name="profile_gender_display">
+        <item>หญิง</item>
+        <item>ชาย</item>
+    </string-array>
 </resources>
