--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -529,4 +529,8 @@
     <string name="local_time_format">MMM dd, yyyy</string>
     <string name="promotion_format">%1$s từ <b>%2$s</b> cấp độ (%3$s)</string>
 
+    <string-array name="profile_gender_display">
+        <item>Nữ</item>
+        <item>Nam</item>
+    </string-array>
 </resources>
