--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -445,7 +445,7 @@
     <string name="btn_submit">Submit</string>
     <string name="btn_update">Update</string>
     <string name="hint_answer">Answer</string>
-    <string name="choose_secret_question">Choose your secret question</string>
+    <string name="choose_secret_question">Choose your security question</string>
     <string name="choose_new_secret_question">Choose your new secret question</string>
     <string name="skip">SKIP</string>
     <string name="complete">COMPLETE</string>
