--- a/patternLibrary/src/main/res/values-ja/strings.xml
+++ b/patternLibrary/src/main/res/values-ja/strings.xml
@@ -7,11 +7,11 @@
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <string name="pl_cancel">Cancel</string>
-    <string name="pl_confirm">Confirm</string>
-    <string name="pl_confirm_pattern">Confirm your pattern lock</string>
+    <string name="pl_cancel">キャンセル</string>
+    <string name="pl_confirm">確認</string>
+    <string name="pl_confirm_pattern">パターンパス再確認</string>
     <string name="pl_continue">Continue</string>
-    <string name="pl_draw_pattern">ログインパターンパスをなぞってください</string>
+    <string name="pl_draw_pattern">設定するパターンパスをなぞってください</string>
     <string name="pl_draw_pattern_to_unlock">Draw pattern to unlock</string>
     <string name="pl_forgot_pattern">Forgot pattern</string>
     <string name="pl_pattern_confirmed">Your new unlock pattern</string>
