--- a/patternLibrary/src/main/res/values/strings.xml
+++ b/patternLibrary/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="pl_confirm">Confirm</string>
     <string name="pl_confirm_pattern">Confirm your pattern lock</string>
     <string name="pl_continue">Continue</string>
-    <string name="pl_draw_pattern">ログインパターンパスをなぞってください</string>
+    <string name="pl_draw_pattern">Draw your pattern lock</string>
     <string name="pl_draw_pattern_to_unlock">Draw pattern to unlock</string>
     <string name="pl_forgot_pattern">Forgot pattern</string>
     <string name="pl_pattern_confirmed">Your new unlock pattern</string>
