--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -546,8 +546,9 @@
 
     <string name="create_new_password">Create a password</string>
     <string name="input_your_password">Input your Password</string>
-    <string name="input_new_password">Input new password</string>
-    <string name="input_repeat_password">Input repeat your password</string>
+    <string name="input_password">Input  new password</string>
+    <string name="input_new_password">Input your new password</string>
+    <string name="input_repeat_password">Confirm new password</string>
     <string name="fullname">Full Name</string>
     <string name="info">Info</string>
     <string name="wrong_format_password">Password must have at least 8 characters. Inlcluding 1 Uppercase, 1 lowercase and 1 number.</string>
