--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -553,7 +553,7 @@
     <string name="info">Info</string>
     <string name="wrong_format_password">Password must have at least 8 characters. Inlcluding 1 Uppercase, 1 lowercase and 1 number.</string>
     <string name = "password_is_empty">password cannot be empty</string>
-    <string name = "pattern_coutdown">Draw your pattern in %s seconds or return to home</string>
-    <string name = "passcode_coutdown">Input your passcode in %s seconds or return to home</string>
+    <string name = "pattern_coutdown">Draw your pattern\n\nin %s seconds </string>
+    <string name = "passcode_coutdown">Input your passcode\n\nin %s seconds </string>
     <!--<string name="waiting_develop">This function is developing</string>-->
 </resources>
